kubernetes/fluxcd/apps/base/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`n8n.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: certificate-secret
